# internal/handler/user.go
@@ -23,15 +23,16 @@ func NewUserHandler(handler *Handler, userService service.UserService) *UserHand
 }
 
 // Register godoc
-// @Summary 用户注册
-// @Schemes
-// @Description 目前只支持邮箱登录
-// @Tags 用户模块
-// @Accept json
-// @Produce json
-// @Param request body v1.RegisterRequest true "params"
-// @Success 200 {object} v1.Response
-// @Router /register [post]
+//
+//	@Summary	用户注册
+//	@Schemes
+//	@Description	目前只支持邮箱登录
+//	@Tags			用户模块
+//	@Accept			json
+//	@Produce		json
+//	@Param			request	body		v1.RegisterRequest	true	"params"
+//	@Success		200		{object}	v1.Response
+//	@Router			/register [post]
 func (h *UserHandler) Register(ctx *gin.Context) {
 	req := new(v1.RegisterRequest)
 	if err := ctx.ShouldBindJSON(req); err != nil {
@@ -49,15 +50,16 @@ func (h *UserHandler) Register(ctx *gin.Context) {
 }
 
 // Login godoc
-// @Summary 账号登录
-// @Schemes
-// @Description
-// @Tags 用户模块
-// @Accept json
-// @Produce json
-// @Param request body v1.LoginRequest true "params"
-// @Success 200 {object} v1.LoginResponse
-// @Router /login [post]
+//
+//	@Summary	账号登录
+//	@Schemes
+//	@Description
+//	@Tags		用户模块
+//	@Accept		json
+//	@Produce	json
+//	@Param		request	body		v1.LoginRequest	true	"params"
+//	@Success	200		{object}	v1.LoginResponse
+//	@Router		/login [post]
 func (h *UserHandler) Login(ctx *gin.Context) {
 	var req v1.LoginRequest
 	if err := ctx.ShouldBindJSON(&req); err != nil {
@@ -77,15 +79,16 @@ func (h *UserHandler) Login(ctx *gin.Context) {
 }
 
 // GetProfile godoc
-// @Summary 获取用户信息
-// @Schemes
-// @Description
-// @Tags 用户模块
-// @Accept json
-// @Produce json
-// @Security Bearer
-// @Success 200 {object} v1.GetProfileResponse
-// @Router /user [get]
+//
+//	@Summary	获取用户信息
+//	@Schemes
+//	@Description
+//	@Tags		用户模块
+//	@Accept		json
+//	@Produce	json
+//	@Security	Bearer
+//	@Success	200	{object}	v1.GetProfileResponse
+//	@Router		/user [get]
 func (h *UserHandler) GetProfile(ctx *gin.Context) {
 	userId := GetUserIdFromCtx(ctx)
 	if userId == "" {
@@ -103,15 +106,16 @@ func (h *UserHandler) GetProfile(ctx *gin.Context) {
 }
 
 // GetProfile godoc
-// @Summary 获取用户信息
-// @Schemes
-// @Description
-// @Tags 用户模块
-// @Accept json
-// @Produce json
-// @Security Bearer
-// @Success 200 {object} v1.GetProfileResponse
-// @Router /user [get]
+//
+//	@Summary	获取用户信息
+//	@Schemes
+//	@Description
+//	@Tags		用户模块
+//	@Accept		json
+//	@Produce	json
+//	@Security	Bearer
+//	@Success	200	{object}	v1.GetProfileResponse
+//	@Router		/user [get]
 func (h *UserHandler) GetUserList(ctx *gin.Context) {
 	user, err := h.userService.GetUserList(ctx)
 	if err != nil {
@@ -123,16 +127,17 @@ func (h *UserHandler) GetUserList(ctx *gin.Context) {
 }
 
 // UpdateProfile godoc
-// @Summary 修改用户信息
-// @Schemes
-// @Description
-// @Tags 用户模块
-// @Accept json
-// @Produce json
-// @Security Bearer
-// @Param request body v1.UpdateProfileRequest true "params"
-// @Success 200 {object} v1.Response
-// @Router /user [put]
+//
+//	@Summary	修改用户信息
+//	@Schemes
+//	@Description
+//	@Tags		用户模块
+//	@Accept		json
+//	@Produce	json
+//	@Security	Bearer
+//	@Param		request	body		v1.UpdateProfileRequest	true	"params"
+//	@Success	200		{object}	v1.Response
+//	@Router		/user [put]
 func (h *UserHandler) UpdateProfile(ctx *gin.Context) {
 	userId := GetUserIdFromCtx(ctx)
 
